@@ -226,10 +226,11 @@ init_db()
     len += strlen(Database.hostname);
   len += strlen(port);
   len += strlen(":::");
+  len += strlen(Database.dbname);
   len++;
 
   dbstr = MyMalloc(len);
-  snprintf(dbstr, len-1, "%s:%s:%s:%s", Database.driver, 
+  snprintf(dbstr, len, "%s:%s:%s:%s", Database.driver, 
       Database.hostname == NULL ? "" : Database.hostname, port, Database.dbname);
 
   Database.yada = yada_init(dbstr, 0);
